// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
</div>
`;

exports[`getField for Form 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <div
            className="row"
          />
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "cursor": "not-allowed",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                      "width": 24,
                    }
                  }
                >
                  <div />
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Form 3`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <div
            className="row"
          />
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  Label
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Form 4`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <div
            className="row"
          />
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  Label
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "minHeight": 32,
                    "muiPrepared": true,
                  }
                }
              >
                <td
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  selected={false}
                  style={
                    Object {
                      "backgroundColor": "rgba(127, 221, 233, 0.4)",
                      "fontSize": 13,
                      "height": 32,
                      "muiPrepared": true,
                      "overflow": "hidden",
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  <div
                    onClick={[Function]}
                    style={
                      Object {
                        "minHeight": 32,
                        "paddingTop": 8,
                      }
                    }
                  >
                    <div>
                      <span>
                        todo 1
                      </span>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": false,
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "minHeight": 32,
                    "muiPrepared": true,
                  }
                }
              >
                <td
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  selected={false}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "fontSize": 13,
                      "height": 32,
                      "muiPrepared": true,
                      "overflow": "hidden",
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  <div
                    onClick={[Function]}
                    style={
                      Object {
                        "minHeight": 32,
                        "paddingTop": 8,
                      }
                    }
                  >
                    <div>
                      <span>
                        todo 3
                      </span>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Form empty 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
</div>
`;

exports[`getField for Form empty 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <div
            className="row"
          />
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "cursor": "not-allowed",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                      "width": 24,
                    }
                  }
                >
                  <div />
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Form empty 3`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <div
            className="row"
          />
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  Label
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Form empty 4`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <div
            className="row"
          />
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  Label
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
</div>
`;

exports[`getField for Form readonly 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "cursor": "not-allowed",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                      "width": 24,
                    }
                  }
                >
                  <div />
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Form readonly 3`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  Label
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Form readonly 4`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-One2Many-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        />
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        />
      </div>
      <div
        style={
          Object {
            "height": "auto",
            "muiPrepared": true,
            "overflow": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "muiPrepared": true,
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <thead
              className={undefined}
              style={
                Object {
                  "borderBottom": "1px solid #e0e0e0",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "muiPrepared": true,
                  }
                }
              >
                <th
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "#9e9e9e",
                      "fontSize": 12,
                      "fontWeight": "normal",
                      "height": 56,
                      "muiPrepared": true,
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "position": "relative",
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  Label
                </th>
              </tr>
            </thead>
          </table>
        </div>
        <div
          style={
            Object {
              "height": "inherit",
              "muiPrepared": true,
              "overflowX": "hidden",
              "overflowY": "auto",
            }
          }
        >
          <table
            className={undefined}
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderCollapse": "collapse",
                "borderSpacing": 0,
                "fontFamily": "Roboto, sans-serif",
                "tableLayout": "fixed",
                "width": "100%",
              }
            }
          >
            <tbody
              className={undefined}
              style={
                Object {
                  "height": "inherit",
                  "muiPrepared": true,
                }
              }
            >
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": "1px solid #e0e0e0",
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "minHeight": 32,
                    "muiPrepared": true,
                  }
                }
              >
                <td
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  selected={false}
                  style={
                    Object {
                      "backgroundColor": "rgba(127, 221, 233, 0.4)",
                      "fontSize": 13,
                      "height": 32,
                      "muiPrepared": true,
                      "overflow": "hidden",
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  <div
                    onClick={[Function]}
                    style={
                      Object {
                        "minHeight": 32,
                        "paddingTop": 8,
                      }
                    }
                  >
                    <div>
                      <span>
                        todo 1
                      </span>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                className={undefined}
                style={
                  Object {
                    "borderBottom": false,
                    "color": "rgba(0, 0, 0, 0.87)",
                    "height": 48,
                    "minHeight": 32,
                    "muiPrepared": true,
                  }
                }
              >
                <td
                  className={undefined}
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  selected={false}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "fontSize": 13,
                      "height": 32,
                      "muiPrepared": true,
                      "overflow": "hidden",
                      "padding": 0,
                      "paddingLeft": 24,
                      "paddingRight": 24,
                      "textAlign": "left",
                      "textOverflow": "ellipsis",
                      "whiteSpace": "nowrap",
                    }
                  }
                >
                  <div
                    onClick={[Function]}
                    style={
                      Object {
                        "minHeight": 32,
                        "paddingTop": 8,
                      }
                    }
                  >
                    <div>
                      <span>
                        todo 3
                      </span>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for List 1`] = `
<div>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
      }
    }
  >
    <div>
      <a
        onClick={[Function]}
      >
        1
      </a>
      <span>
        ,
      </span>
    </div>
    <div>
      <a
        onClick={[Function]}
      >
        2
      </a>
      <span>
        ,
      </span>
    </div>
    <div>
      <a
        onClick={[Function]}
      >
        3
      </a>
      <span>
        ,
      </span>
    </div>
  </div>
</div>
`;

exports[`getField for List 2`] = `
<div>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
      }
    }
  >
    <div>
      <a
        onClick={[Function]}
      >
        todo 1
      </a>
      <span>
        ,
      </span>
    </div>
    <div>
      <a
        onClick={[Function]}
      >
        todo 2
      </a>
      <span>
        ,
      </span>
    </div>
    <div>
      <a
        onClick={[Function]}
      >
        todo 3
      </a>
      <span>
        ,
      </span>
    </div>
  </div>
</div>
`;

exports[`getField for Thumbnail 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-One2Many-field-name-"
  >
     
  </label>
  <div>
    <div
      style={
        Object {
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <div>
        <a
          onClick={[Function]}
        >
          1
        </a>
        <span>
          ,
        </span>
      </div>
      <div>
        <a
          onClick={[Function]}
        >
          2
        </a>
        <span>
          ,
        </span>
      </div>
      <div>
        <a
          onClick={[Function]}
        >
          3
        </a>
        <span>
          ,
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Thumbnail 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-One2Many-field-name-"
  >
     
  </label>
  <div>
    <div
      style={
        Object {
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <div>
        <a
          onClick={[Function]}
        >
          todo 1
        </a>
        <span>
          ,
        </span>
      </div>
      <div>
        <a
          onClick={[Function]}
        >
          todo 2
        </a>
        <span>
          ,
        </span>
      </div>
      <div>
        <a
          onClick={[Function]}
        >
          todo 3
        </a>
        <span>
          ,
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Thumbnail 3`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-One2Many-field-name-"
  >
    Test
  </label>
  <div>
    <div
      style={
        Object {
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <div>
        <a
          onClick={[Function]}
        >
          1
        </a>
        <span>
          ,
        </span>
      </div>
      <div>
        <a
          onClick={[Function]}
        >
          2
        </a>
        <span>
          ,
        </span>
      </div>
      <div>
        <a
          onClick={[Function]}
        >
          3
        </a>
        <span>
          ,
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`getField for Thumbnail 4`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-One2Many-field-name-"
  >
    Test
  </label>
  <div>
    <div
      style={
        Object {
          "display": "flex",
          "flexWrap": "wrap",
        }
      }
    >
      <div>
        <a
          onClick={[Function]}
        >
          todo 1
        </a>
        <span>
          ,
        </span>
      </div>
      <div>
        <a
          onClick={[Function]}
        >
          todo 2
        </a>
        <span>
          ,
        </span>
      </div>
      <div>
        <a
          onClick={[Function]}
        >
          todo 3
        </a>
        <span>
          ,
        </span>
      </div>
    </div>
  </div>
</div>
`;
